tests/ecc-aws-117-security_group_ingress_is_restricted_traffic_to_oracle_db_port_1521/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "test-green-oracledb",
                "GroupName": "test-green-oracledb",
                "IpPermissions": [
                    {
                        "FromPort": 1521,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "192.168.1.1/32"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 1521,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "123456789123",
                "GroupId": "sg-123456abcdef",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "VpcId": "vpc-ad123456"
            }
        ],
        "ResponseMetadata": {}
    }
}
